fixed overflow issues on mobile

--- a/src/documentation/css/style.css
+++ b/src/documentation/css/style.css
@@ -88,6 +88,8 @@ h2 {
     background-color: #f8f8f8;
     letter-spacing: 50%;
     border-radius: 8px;
+    overflow-x: scroll;
+    overflow-y: scroll;
     line-height: 80%;
     padding: 8px;
 }
@@ -113,12 +115,18 @@ h2 {
 }
 
 /* Mobile */
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 1720px) {
     .sidebar_nav {
         display: none;
     }
 
     .docs {
         left: 0%;
+    }
+
+    .code-block {
+        padding-left: 8px;
+        padding-right: 15px;
+
     }
 }
